That was the worst problem I have had to solve in a while. Experience timeline is now responsive and scrolls properly on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -508,16 +508,26 @@ h6 {
 /* =========================================================== */
 /* EXPERIENCE */
 
+.bodySectionContent {
+    display: flex;
+    justify-content: start;
+
+    width: 100%;
+    overflow-x: auto; 
+}
+
 #BodySection_Career { 
     width: 80%;
     margin-top: 400px;
-    align-items: center;
 }
 
 .timeline {
     position: relative;
     justify-content: center;
-    margin-bottom: 30px;   
+
+    margin-bottom: 30px;  
+    padding-left: 50px; 
+    padding-right: 50px;
 }
 
 .timelineBar {
